# mangadex-exporter

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mangadex_exporter/: __init__.py  __main__.py  anilist.py  main.py  mangadex.py
