[project]
name = "mangadex-exporter"
version = "0.1.0"
description = "Export manga follows from MangaDex to AniList"
authors = [
    { name = "4ntb" }
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "pydantic>=2.6.0",
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mangadex_exporter"] 